<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/form"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:visibility="visible"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="100dp"
            android:layout_marginStart="100dp"
            android:text="@string/name"
            android:textColor="@android:color/black"
            android:textSize="45sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|end"
                android:layout_weight="1"
                android:gravity="start|end"
                android:paddingLeft="30dp"
                android:paddingRight="40dp"
                android:paddingStart="30dp"
                android:text="@string/e_mail"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editText3"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/enter_e_mail"
                android:inputType="text|textPersonName"
                android:text="@string/enter_e_mail"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|end"
                android:layout_marginEnd="40dp"
                android:layout_marginRight="40dp"
                android:layout_weight="1"
                android:gravity="start|end"
                android:paddingEnd="-200dp"
                android:paddingLeft="30dp"
                android:paddingRight="40dp"
                android:paddingStart="30dp"
                android:text="@string/password"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editText4"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:paddingRight="40dp"
                android:textColor="@android:color/black" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/button14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:text="@string/login" />

</LinearLayout>